# rust-function

./: Cargo.toml  README.md  README.zh_CN.md  debug_display_patch.patch  test_arc_closure  test_arc_supplier_relaxed
doc/: consumer_design.md  consumer_design.zh_CN.md  mapper_design.zh_CN.md  mutator_design.md  mutator_design.zh_CN.md  transformer_design.md  transformer_design.zh_CN.md
examples/consumers/: bi_consumer_once_demo.rs  consumer_once_demo.rs
src/: comparator.rs  lib.rs  macros.rs  tester.rs
src/consumers/: bi_consumer.rs  bi_consumer_once.rs  consumer.rs  consumer_once.rs  stateful_bi_consumer.rs  stateful_consumer.rs
src/functions/: bi_function.rs  bi_function_once.rs  bi_mutating_function.rs  bi_mutating_function_once.rs  function.rs  function_once.rs  mod.rs  mutating_function.rs  mutating_function_once.rs  stateful_function.rs  stateful_mutating_function.rs
src/macros/: arc_conversions.rs  box_conversions.rs  box_into_conversions.rs  closure_once_trait.rs  closure_trait.rs  mod.rs  rc_conversions.rs
src/mutators/: macros.rs  mod.rs  mutator.rs  mutator_once.rs  stateful_mutator.rs
src/predicates/: bi_predicate.rs  mod.rs  predicate.rs
src/suppliers/: mod.rs  stateful_supplier.rs  supplier.rs  supplier_once.rs
src/transformers/: bi_transformer.rs  bi_transformer_once.rs  mod.rs  stateful_bi_transformer.rs  stateful_transformer.rs  transformer.rs  transformer_once.rs
tests/: relaxed_bounds_tests.rs
tests/consumers/: bi_consumer_tests.rs  consumer_tests.rs  mod.rs  stateful_bi_consumer_tests.rs  stateful_consumer_tests.rs
tests/functions/: bi_function_once_tests.rs  bi_function_tests.rs  bi_mutating_function_tests.rs  function_once_tests.rs  function_tests.rs  mod.rs  mutating_function_once_tests.rs  mutating_function_tests.rs  stateful_function_tests.rs  stateful_mutating_function_tests.rs
tests/mutators/: mutator_once_tests.rs  mutator_tests.rs  stateful_mutator_tests.rs
tests/predicates/: bi_predicate_tests.rs  predicate_tests.rs
tests/suppliers/: mod.rs  stateful_supplier_tests.rs  (+2 more)
(+75 files in other folders)
